
* General

  - Dropped support for Python 2.7, 3.5, and 3.6. and removed compatibility
    hacks from code and tests.
  - Code cleanup,
    check PEP 8 conformity with `flake8` (exceptions in file tox.ini).

* docutils/core.py:

  Publisher.publish(): Print info and prompt when waiting for input from
  a terminal cf. https://clig.dev/#interactivity.

* docutils/parsers/__init__.py

  - Alias for the "myst" parser (https://pypi.org/project/myst-docutils).
  - Use absolute module names in ``_parser_aliases`` instead of two
    import attempts. (Keeps details if the `recommonmark_wrapper.py` module
    raises an ImportError.)
  - Prepend parser name to ImportError if importing a parser class fails.

* docutils/parsers/recommonmark_wrapper.py

  - Raise ImportError, if import of the upstream parser module fails.
    If called from an `"include" directive`_,
    the system-message now has source/line info.
  - Adapt to and test with "recommonmark" versions 0.6.0 and 0.7.1.

  .. _"include" directive: docs/ref/rst/directives.html#include

* docutils/parsers/rst/__init__.py

  - Update PEP base URL (fixes bug #445),
    use "https:" scheme in RFC base URL.
  - Add `reporter` to `Directive` class attributes.

* docutils/parsers/rst/directives/__init__.py

  - parser_name() keeps details if converting ImportError to ValueError.

* docutils/parsers/rst/roles.py

  - Don't use mutable default values for function arguments. Fixes bug #430.

* docutils/transforms/universal.py

  - Fix bug 435: invalid references in `problematic` nodes with report_level=4.

* docutils/utils/__init__.py

  - `decode_path()` returns `str` instance instead of `nodes.reprunicode`.
  - New function error_string() obsoletes utils.error_reporting.ErrorString.
  - Class `ErrorOutput` moved here from docutils/utils/error_reporting.py

* docutils/utils/error_reporting.py

  - Add deprecation warning.

* docutils/writers/_html_base.py
