@@ -76,9 +76,9 @@ _parser_aliases = {  # short names for known parsers
                    'recommonmark': 'docutils.parsers.recommonmark_wrapper',
                    'myst': 'myst_parser.docutils_',
                    # 'pycmark': works out of the box
-                   # TODO: the following two could be either of the above
-                   'commonmark': 'docutils.parsers.recommonmark_wrapper',
-                   'markdown': 'docutils.parsers.recommonmark_wrapper',
+                   # dispatcher for 3rd-party Markdown parsers
+                   'commonmark': 'docutils.parsers.commonmark_wrapper',
+                   'markdown': 'docutils.parsers.commonmark_wrapper',
                   }
 
 
